Add user create order functionality along with its tests
