# public/swagger/swagger.yml
@@ -15,6 +15,30 @@ tags:
   - name: Products
     description: List all products
 
+host: '127.0.0.1:8000'
+schemes:
+ - http
+ - https
+produces:
+ - application/json
+securityDefinitions: (1)
+  Bearer:
+    description: |
+    For accessing the API a valid JWT token must be passed in all the queries in
+    the 'Authorization' header.
+
+
+    A valid JWT token is generated by the API and retourned as answer of a call
+    to the route /login giving a valid user & password.
+
+
+    The following syntax must be used in the 'Authorization' header :
+
+        Bearer: xxxxxx.yyyyyyy.zzzzzz
+    type: apiKey
+    name: Authorization
+    in: header
+
 paths:
   /api/v1/user/login:
     post:
@@ -152,6 +176,32 @@ paths:
           description: Internal server error
       security: []
 
+  /api/v1/category/{uuid}:
+    get:
+      tags:
+        - Categories
+      summary: Fetch a category
+      operationId: categories-read
+      parameters:
+        - in: path
+          name: uuid
+          required: true
+          schema:
+            type: string
+
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: Page not found
+        422:
+          description: Unprocessable Entity
+        500:
+          description: Internal server error
+      security: []
+
   /api/v1/products:
     get:
       tags:
@@ -183,6 +233,64 @@ paths:
           required: true
           schema:
             type: string
+
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: Page not found
+        422:
+          description: Unprocessable Entity
+        500:
+          description: Internal server error
+      security: []
+
+  /api/v1/order/create:
+    post:
+      tags:
+        - Orders
+      summary: Create a new order
+      operationId: orders-create
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              required:
+                - order_status_uuid
+                - payment_uuid
+                - products
+                - address
+              properties:
+                order_status_uuid:
+                  type: string
+                  description: Order status UUID
+                payment_uuid:
+                  type: string
+                  description: Payment UUID
+                products:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      uuid:
+                        type: string
+                        description: Product UUID
+                      quantity:
+                        type: integer
+                        description: Product quantity
+                  description: Array of objects with product uuid and quantity
+                address:
+                  type: object
+                  properties:
+                    billing:
+                      type: string
+                    shipping:
+                      type: string
+                  description: Billing and Shipping address
+              type: object
 
       responses:
         200:
